Updates to styles and some added projects

--- a/education.css
+++ b/education.css
@@ -33,7 +33,7 @@ body {
   
   /* Style the main content area */
   main {
-    max-width: 800px;
+    max-width: 80vw;
     margin: 20px auto;
     padding: 20px;
     background-color: #fff;
