--- a/education.css
+++ b/education.css
@@ -72,7 +72,8 @@ body {
 */
 
   /* Style the table */
-  #table {
+
+  table {
      width: 100%;
      margin-left: 50%;
      margin-right: 50%;
@@ -115,6 +116,13 @@ body {
   #author a:hover {
     text-decoration: underline;
   }
+
+  @media (max-width: 480px) {
+    table {
+      margin-left: 25%;
+     margin-right: auto;
+    }
+}
   
 
 
